samples/_failures_safe/1761654738_a73002_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_421c915e.c: In function ‘main’:
./samples/SAFE/__tmp_421c915e.c:136:9: error: expected declaration or statement at end of input
  136 |         input_buffer[input_len++] = (uint8_t)c;
      |         ^~~~~~~~~~~~
./samples/SAFE/__tmp_421c915e.c:136:9: error: expected declaration or statement at end of input
